fixed button spacing in projects

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,6 @@
   border-radius: 2px; /* Optional: Rounded corners for the lines */
 }
 
-/* .hamburger:hover div {
-  background-color: #555; Slightly different color on hover for interactivity
-} */
-
 #background-video {
   position: absolute; /* Positioned relative to the viewport */
   top: 50%; /* Center vertically */
@@ -152,11 +148,32 @@
   width: 100px;
   margin: auto;
   display: block;
-  
-  
-
-  
 }
+
+.project-button {
+  background-color: lightgrey; /* Change to light grey */
+  color: black; /* Ensuring text and icons are black */
+  border: none;
+  padding: 10px 20px;
+  margin-top: 20px; /* Adds space above the button */
+  margin-bottom: 5px; /* Adjust as needed */
+  border-radius: 5px;
+  transition: background-color 0.3s, transform 0.3s;
+  font-size: 16px;
+  cursor: pointer;
+  outline: black;
+}
+
+.project-button:hover {
+  background-color: black; /* Darker grey on hover */
+  transform: scale(1.05);
+}
+
+/* Style for the icon within the button */
+.project-button .MuiSvgIcon-root {
+  color: black; /* Ensuring the icon is black */
+}
+
 
 @media (max-width: 600px) {
   .logo-animation {
